Изменения внешнего вида элемента, добавление анимационных эффектов 1. В menu добавлен анимационный эффект при переходе в состояния наведения и фокусирования 2. У кнопки добавлена сверху внутренния тень белого цвета 3. В блоке с portfolio к какртинками добавлена прозрачность и тень при наведении 4. В блоке about картинкам добавлена прозрачность при наведении

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         branding
                     </h3>
                     <div class="section__services-info">
-                        <p lang="la">
+                        <p>
                             Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor
                             ut labore et dolore magna aliqua. Ut enim
@@ -70,7 +70,7 @@
                         web design
                     </h3>
                     <div class="section__services-info">
-                        <p lang="la">
+                        <p>
                             Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor
                             ut labore et dolore magna aliqua. Ut enim
@@ -83,7 +83,7 @@
                         marketing
                     </h3>
                     <div class="section__services-info">
-                        <p lang="la">
+                        <p>
                             Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor
                             ut labore et dolore magna aliqua. Ut enim
@@ -243,7 +243,7 @@
                 <div class="main-container about__container">
                     <article class="about__info-container">
                         <h3 class="about__info-title title">
-                            Elizabeth-Stevens - Graphic Designer
+                            Elizabeth Stevens - Graphic Designer
                         </h3>
                         <div class="about__description">
                             <p>
@@ -323,7 +323,7 @@
                             Diana Paterns - UX Specialist
                         </h3>
                         <div class="about__description">
-                            <p lang="la">
+                            <p>
                                 Visual Designers with the User Experience team are
                                 responsible for the creative and visual aesthetic
                                 of our client projects. We are seeking strong creative
@@ -402,7 +402,7 @@
                             Kate Eastwood - UI Senior Designer
                         </h3>
                         <div class="about__description">
-                            <p lang="la">
+                            <p>
                                 This position is responsible for the design and
                                 production of print, web and graphic applications
                                 such as environmental graphics, retail POS,
