Добавление блоков и удаление прежних элементов согласно БЭМ 1. Созданы новые блоки services и posts 2. Добавлены элементы в блоки services, about, posts

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
             </div>
         </div>
     </div>
-    <section class="section section__services" id="services">
+    <section class="section services section__services" id="services">
         <h2 class="section__title title">
             services
         </h2>
-        <div class="section__content">
-            <div class="main-container section__services-content">
-                <article class="section__branding">
-                    <h3 class="title section__services-name">
+        <div class="section__content services__content">
+            <div class="main-container services__container">
+                <article class="services__branding">
+                    <h3 class="title services__name">
                         branding
                     </h3>
-                    <div class="section__services-info">
+                    <div class="services__info">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor
@@ -65,11 +65,11 @@
                         </p>
                     </div>
                 </article>
-                <article class="section__design">
-                    <h3 class="title section__services-name">
+                <article class="services__design">
+                    <h3 class="title services__name">
                         web design
                     </h3>
-                    <div class="section__services-info">
+                    <div class="services__info">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor
@@ -78,11 +78,11 @@
                         </p>
                     </div>
                 </article>
-                <article class="section__marketing">
-                    <h3 class="title section__services-name">
+                <article class="services__marketing">
+                    <h3 class="title services__name">
                         marketing
                     </h3>
-                    <div class="section__services-info">
+                    <div class="services__info">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor
@@ -98,7 +98,7 @@
         <h2 class="section__title title">
             PORTFOLIO
         </h2>
-        <div class="section__content protfolio__content">
+        <div class="protfolio__content">
             <a class="portfolio__link" href="#">
                 <img class="portfolio__img" src="img/port8.jpg" alt="Проект 3">
             </a>
@@ -141,7 +141,7 @@
         <h2 class="section__title title">
             ABOUT US
         </h2>
-        <div class="section__content">
+        <div class="section__content about__content">
             <div class="main-container about__tabs">
                 <label class="about__tab" for="Elizabeth-Stevens">
                     <img class="about__tab-img" src="img/member1.png" alt="Elizabeth Stevens">
@@ -475,13 +475,11 @@
             </div>
         </div>
     </section>
-    <section class="section posts" id="posts">
-        <div class="main-container">
+    <section class="section section__posts posts" id="posts">
             <h2 class="section__title title">
                 LATEST POSTS
             </h2>
-        </div>
-        <div class="section__content posts__content">
+        <div class="posts__content section__content">
             <div class="main-container">
                 <div class="posts__column">
                     <article class="article posts__article">
