Оптимизация сайта 1. Оптимизированны картинки 2. Минифицированы index.html и style.css в папке build 3. Поправлена вёрстка, убраны лишние классы в блоке services и posts

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
     </div>
-    <section class="section services section__services" id="services">
+    <section class="section services" id="services">
         <h2 class="section__title title">
             services
         </h2>
